--- a/app/src/main/res/layout/activity_registrar_asociaciones.xml
+++ b/app/src/main/res/layout/activity_registrar_asociaciones.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,84 +9,92 @@
     android:background="@drawable/backgroundmain"
     tools:ignore="ExtraText">
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="200dp">
 
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btn_SumarMiembro"
-        android:layout_width="60dp"
-        android:layout_height="38dp"
-        android:layout_marginTop="8dp"
-        android:background="@drawable/round_button_background"
-        android:backgroundTint="@color/white"
-        android:fontFamily="sans-serif-medium"
-        android:text="+"
-        android:textAlignment="center"
-        android:textColor="@color/purple_700"
-        android:textSize="14sp"
-        app:layout_constraintTop_toBottomOf="@+id/idCarnetMiembro"
-        tools:layout_editor_absoluteX="135dp" />
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btn_SumarMiembro"
+            android:layout_width="71dp"
+            android:layout_height="49dp"
+            android:layout_marginTop="4dp"
+            android:layout_marginEnd="24dp"
+            android:background="@drawable/round_button_background"
+            android:backgroundTint="@color/white"
+            android:fontFamily="sans-serif-medium"
+            android:text="+"
+            android:textAlignment="center"
+            android:textColor="@color/purple_700"
+            android:textSize="20sp"
+            app:layout_constraintEnd_toStartOf="@+id/btn_RestarMiembro"
+            app:layout_constraintTop_toBottomOf="@+id/idCarnetMiembro" />
 
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btn_Guardar"
-        android:layout_width="179dp"
-        android:layout_height="52dp"
-        android:layout_marginStart="116dp"
-        android:layout_marginTop="644dp"
-        android:background="@drawable/round_button_background"
-        android:backgroundTint="@color/white"
-        android:fontFamily="sans-serif-medium"
-        android:text="Guardar"
-        android:textAlignment="center"
-        android:textColor="@color/purple_700"
-        android:textSize="14sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btn_Guardar"
+            android:layout_width="179dp"
+            android:layout_height="52dp"
+            android:layout_marginStart="128dp"
+            android:layout_marginTop="696dp"
+            android:background="@drawable/round_button_background"
+            android:backgroundTint="@color/white"
+            android:fontFamily="sans-serif-medium"
+            android:text="Guardar"
+            android:textAlignment="center"
+            android:textColor="@color/purple_700"
+            android:textSize="14sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btn_RestarMiembro"
-        android:layout_width="60dp"
-        android:layout_height="38dp"
-        android:layout_marginStart="220dp"
-        android:layout_marginTop="8dp"
-        android:background="@drawable/round_button_background"
-        android:backgroundTint="@color/white"
-        android:fontFamily="sans-serif-medium"
-        android:text="-"
-        android:textAlignment="center"
-        android:textColor="@color/purple_700"
-        android:textSize="14sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/idCarnetMiembro" />
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btn_RestarMiembro"
+            android:layout_width="71dp"
+            android:layout_height="49dp"
+            android:layout_marginTop="4dp"
+            android:background="@drawable/round_button_background"
+            android:backgroundTint="@color/white"
+            android:fontFamily="sans-serif-medium"
+            android:text="-"
+            android:textAlignment="center"
+            android:textColor="@color/purple_700"
+            android:textSize="20sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.597"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/idCarnetMiembro" />
 
-    <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/nombreAsociacion"
-        android:layout_width="334dp"
-        android:layout_height="52dp"
-        android:layout_marginStart="38dp"
-        android:layout_marginTop="112dp"
-        android:layout_marginEnd="39dp"
-        android:backgroundTint="#F6F6F6"
-        android:text="Nombre"
-        android:inputType="text"
-        android:textSize="18sp"
-        android:textColor="#FFFFFF"
-        android:paddingStart="8dp"
-        android:paddingEnd="8dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/nombreAsociacion"
+            android:layout_width="334dp"
+            android:layout_height="52dp"
+            android:layout_marginStart="38dp"
+            android:layout_marginTop="112dp"
+            android:layout_marginEnd="39dp"
+            android:backgroundTint="#F6F6F6"
+            android:inputType="text"
+            android:paddingStart="8dp"
+            android:paddingEnd="8dp"
+            android:hint="Nombre"
+            android:textColor="#FFFFFF"
+            android:textColorHint="#FFFFFF"
+            android:textSize="18sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.485"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <com.google.android.material.textfield.TextInputEditText
+        <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/idCarnetMiembro"
         android:layout_width="334dp"
         android:layout_height="52dp"
         android:layout_marginBottom="224dp"
         android:backgroundTint="#F6F6F6"
-        android:inputType="text"
+        android:inputType="number"
         android:paddingStart="8dp"
         android:paddingEnd="8dp"
-        android:text="Carnet de miembro a agregar"
+        android:hint="Carnet de miembro"
         android:textColor="#FFFFFF"
+        android:textColorHint="#FFFFFF"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -94,82 +103,86 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.982" />
 
-    <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/idCorreoAsociacion"
-        android:backgroundTint="#F6F6F6"
-        android:layout_width="334dp"
-        android:layout_height="52dp"
-        android:layout_marginBottom="360dp"
-        android:inputType="text"
-        android:paddingStart="8dp"
-        android:paddingEnd="8dp"
-        android:text="Correo electrónico"
-        android:textColor="#FFFFFF"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.493"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/idCorreoAsociacion"
+            android:layout_width="334dp"
+            android:layout_height="52dp"
+            android:layout_marginBottom="360dp"
+            android:backgroundTint="#F6F6F6"
+            android:inputType="textEmailAddress"
+            android:paddingStart="8dp"
+            android:paddingEnd="8dp"
+            android:hint="Correo electrónico"
+            android:textColor="#FFFFFF"
+            android:textColorHint="#FFFFFF"
+            android:textSize="18sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.491"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.958" />
 
-    <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/idSedeAsociacion"
-        android:layout_width="334dp"
-        android:layout_height="52dp"
-        android:layout_marginBottom="284dp"
-        android:backgroundTint="#F6F6F6"
-        android:inputType="text"
-        android:paddingStart="8dp"
-        android:paddingEnd="8dp"
-        android:text="Sede"
-        android:textColor="#FFFFFF"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.493"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.977" />
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/idSedeAsociacion"
+            android:layout_width="334dp"
+            android:layout_height="52dp"
+            android:layout_marginBottom="284dp"
+            android:backgroundTint="#F6F6F6"
+            android:inputType="text"
+            android:paddingStart="8dp"
+            android:paddingEnd="8dp"
+            android:hint="Sede"
+            android:textColor="#FFFFFF"
+            android:textColorHint="#FFFFFF"
+            android:textSize="18sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.491"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.946" />
 
-    <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/idDescripcionAsociacion"
-        android:layout_width="334dp"
-        android:layout_height="52dp"
-        android:layout_marginTop="180dp"
-        android:layout_marginEnd="36dp"
-        android:text="Descripción"
-        android:backgroundTint="#F6F6F6"
-        android:inputType="text"
-        android:paddingStart="8dp"
-        android:paddingEnd="8dp"
-        android:textColor="#FFFFFF"
-        android:textSize="18sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.926"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/idDescripcionAsociacion"
+            android:layout_width="334dp"
+            android:layout_height="52dp"
+            android:layout_marginTop="184dp"
+            android:layout_marginEnd="36dp"
+            android:backgroundTint="#F6F6F6"
+            android:inputType="text"
+            android:paddingStart="8dp"
+            android:paddingEnd="8dp"
+            android:hint="Descripción"
+            android:textColor="#FFFFFF"
+            android:textColorHint="#FFFFFF"
+            android:textSize="18sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.736"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/idCodCarreraAsociacion"
-        android:layout_width="334dp"
-        android:layout_height="52dp"
-        android:layout_marginBottom="360dp"
-        android:backgroundTint="#F6F6F6"
-        android:inputType="text"
-        android:paddingStart="8dp"
-        android:paddingEnd="8dp"
-        android:text="Codigo de carrera"
-        android:textColor="#FFFFFF"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.493"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.789" />
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/idCodCarreraAsociacion"
+            android:layout_width="334dp"
+            android:layout_height="52dp"
+            android:layout_marginBottom="360dp"
+            android:backgroundTint="#F6F6F6"
+            android:inputType="number"
+            android:paddingStart="8dp"
+            android:paddingEnd="8dp"
+            android:hint="Codigo de carrera"
+            android:textColor="#FFFFFF"
+            android:textColorHint="#FFFFFF"
+            android:textSize="18sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.491"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.747" />
 
-    <TextView
+        <TextView
         android:id="@+id/texto13"
         android:layout_width="318dp"
         android:layout_height="41dp"
@@ -179,6 +192,7 @@
         android:text="Datos de la Asociación"
         android:textAlignment="center"
         android:textColor="#F6F6F6"
+
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -186,24 +200,34 @@
         app:layout_constraintHorizontal_bias="0.821"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <ScrollView
-        android:id="@+id/scrollView3"
-        android:layout_width="311dp"
-        android:layout_height="70dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginBottom="104dp"
-        android:background="@color/white"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_SumarMiembro"
-        app:layout_constraintVertical_bias="1.0">
+        <ScrollView
+            android:id="@+id/scrollViewMiembros"
+            android:layout_width="335dp"
+            android:layout_height="103dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="16dp"
+            android:contentDescription="miembros"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.443"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/btn_RestarMiembro">
 
-        <LinearLayout
-            android:id="@+id/layoutAsignaciones"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical" />
-    </ScrollView>
-</androidx.constraintlayout.widget.ConstraintLayout>
+            <LinearLayout
+                android:id="@+id/layoutAsignaciones"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/textViewMiembros"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:contentDescription="lista"
+                    android:textColor="#FFFFFF"
+                    android:textSize="18sp" />
+
+            </LinearLayout>
+        </ScrollView>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.core.widget.NestedScrollView>
