--- a/app/src/main/res/layout/activity_registrar_asociaciones.xml
+++ b/app/src/main/res/layout/activity_registrar_asociaciones.xml
@@ -32,10 +32,10 @@
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btn_Guardar"
-            android:layout_width="179dp"
+            android:layout_width="200dp"
             android:layout_height="52dp"
-            android:layout_marginStart="128dp"
-            android:layout_marginTop="696dp"
+            android:layout_marginStart="120dp"
+            android:layout_marginTop="84dp"
             android:background="@drawable/round_button_background"
             android:backgroundTint="@color/white"
             android:fontFamily="sans-serif-medium"
@@ -44,7 +44,7 @@
             android:textColor="@color/purple_700"
             android:textSize="14sp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@+id/scrollViewMiembros" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btn_RestarMiembro"
@@ -68,147 +68,141 @@
             android:layout_width="334dp"
             android:layout_height="52dp"
             android:layout_marginStart="38dp"
-            android:layout_marginTop="112dp"
+            android:layout_marginTop="20dp"
             android:layout_marginEnd="39dp"
             android:backgroundTint="#F6F6F6"
+            android:hint="Nombre"
             android:inputType="text"
             android:paddingStart="8dp"
             android:paddingEnd="8dp"
-            android:hint="Nombre"
             android:textColor="#FFFFFF"
             android:textColorHint="#FFFFFF"
             android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.485"
+            app:layout_constraintHorizontal_bias="0.514"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@+id/texto13" />
 
         <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/idCarnetMiembro"
-        android:layout_width="334dp"
-        android:layout_height="52dp"
-        android:layout_marginBottom="224dp"
-        android:backgroundTint="#F6F6F6"
-        android:inputType="number"
-        android:paddingStart="8dp"
-        android:paddingEnd="8dp"
-        android:hint="Carnet de miembro"
-        android:textColor="#FFFFFF"
-        android:textColorHint="#FFFFFF"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.493"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.982" />
+            android:id="@+id/idCarnetMiembro"
+            android:layout_width="334dp"
+            android:layout_height="52dp"
+            android:layout_marginTop="12dp"
+            android:backgroundTint="#F6F6F6"
+            android:hint="Carnet de miembro"
+            android:inputType="number"
+            android:paddingStart="8dp"
+            android:paddingEnd="8dp"
+            android:textColor="#FFFFFF"
+            android:textColorHint="#FFFFFF"
+            android:textSize="18sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.491"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/idSedeAsociacion" />
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/idCorreoAsociacion"
             android:layout_width="334dp"
             android:layout_height="52dp"
-            android:layout_marginBottom="360dp"
+            android:layout_marginTop="16dp"
             android:backgroundTint="#F6F6F6"
+            android:hint="Correo electrónico"
             android:inputType="textEmailAddress"
             android:paddingStart="8dp"
             android:paddingEnd="8dp"
-            android:hint="Correo electrónico"
             android:textColor="#FFFFFF"
             android:textColorHint="#FFFFFF"
             android:textSize="18sp"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.491"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.958" />
+            app:layout_constraintTop_toBottomOf="@+id/idCodCarreraAsociacion" />
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/idSedeAsociacion"
             android:layout_width="334dp"
             android:layout_height="52dp"
-            android:layout_marginBottom="284dp"
+            android:layout_marginTop="16dp"
             android:backgroundTint="#F6F6F6"
+            android:hint="Sede"
             android:inputType="text"
             android:paddingStart="8dp"
             android:paddingEnd="8dp"
-            android:hint="Sede"
             android:textColor="#FFFFFF"
             android:textColorHint="#FFFFFF"
+
             android:textSize="18sp"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.491"
+            app:layout_constraintHorizontal_bias="0.508"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.946" />
+            app:layout_constraintTop_toBottomOf="@+id/idCorreoAsociacion" />
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/idDescripcionAsociacion"
             android:layout_width="334dp"
             android:layout_height="52dp"
-            android:layout_marginTop="184dp"
+            android:layout_marginTop="16dp"
             android:layout_marginEnd="36dp"
             android:backgroundTint="#F6F6F6"
+            android:hint="Descripción"
             android:inputType="text"
             android:paddingStart="8dp"
             android:paddingEnd="8dp"
-            android:hint="Descripción"
             android:textColor="#FFFFFF"
             android:textColorHint="#FFFFFF"
             android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.736"
+            app:layout_constraintHorizontal_bias="0.723"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@+id/nombreAsociacion" />
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/idCodCarreraAsociacion"
             android:layout_width="334dp"
             android:layout_height="52dp"
-            android:layout_marginBottom="360dp"
+            android:layout_marginTop="12dp"
             android:backgroundTint="#F6F6F6"
+            android:hint="Codigo de carrera"
             android:inputType="number"
             android:paddingStart="8dp"
             android:paddingEnd="8dp"
-            android:hint="Codigo de carrera"
             android:textColor="#FFFFFF"
+
             android:textColorHint="#FFFFFF"
             android:textSize="18sp"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.491"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.747" />
+            app:layout_constraintTop_toBottomOf="@+id/idDescripcionAsociacion" />
 
         <TextView
-        android:id="@+id/texto13"
-        android:layout_width="318dp"
-        android:layout_height="41dp"
-        android:layout_marginEnd="37dp"
-        android:layout_marginBottom="652dp"
-        android:fontFamily="sans-serif-medium"
-        android:text="Datos de la Asociación"
-        android:textAlignment="center"
-        android:textColor="#F6F6F6"
+            android:id="@+id/texto13"
+            android:layout_width="318dp"
+            android:layout_height="41dp"
+            android:layout_marginEnd="37dp"
+            android:fontFamily="sans-serif-medium"
+            android:text="Datos de la Asociación"
+            android:textAlignment="center"
+            android:textColor="#F6F6F6"
 
-        android:textSize="24sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.821"
-        app:layout_constraintStart_toStartOf="parent" />
+            android:textSize="24sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.791"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.078" />
 
         <ScrollView
             android:id="@+id/scrollViewMiembros"
             android:layout_width="335dp"
-            android:layout_height="103dp"
+            android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="12dp"
             android:contentDescription="miembros"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.443"
+            app:layout_constraintHorizontal_bias="0.455"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/btn_RestarMiembro">
 
@@ -223,11 +217,18 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:contentDescription="lista"
+                    android:maxLines="12"
+                    android:scrollbarStyle="insideInset"
+                    android:scrollbars="vertical"
                     android:textColor="#FFFFFF"
-                    android:textSize="18sp" />
+                    android:textSize="18sp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
             </LinearLayout>
         </ScrollView>
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.core.widget.NestedScrollView>
