--- a/app/src/main/res/layout/activity_asignar_colaborador.xml
+++ b/app/src/main/res/layout/activity_asignar_colaborador.xml
@@ -25,7 +25,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/idCarnetColab2"
+        android:id="@+id/idCarnetColab"
         android:layout_width="334dp"
         android:layout_height="52dp"
         android:layout_marginBottom="224dp"
@@ -48,7 +48,7 @@
         android:layout_width="152dp"
         android:layout_height="53dp"
         android:layout_marginStart="128dp"
-        android:layout_marginTop="316dp"
+        android:layout_marginTop="15dp"
         android:background="@drawable/round_button_background"
         android:backgroundTint="@color/white"
         android:fontFamily="sans-serif-medium"
@@ -57,7 +57,7 @@
         android:textColor="@color/purple_700"
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/idCarnetColab" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_Confirmar"
@@ -96,9 +96,9 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/textView"
-                android:layout_width="290dp"
-                android:layout_height="34dp"
+                android:id="@+id/textView2"
+                android:layout_width="314dp"
+                android:layout_height="26dp"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginEnd="225dp"
@@ -108,5 +108,19 @@
                 android:textSize="18sp" />
         </LinearLayout>
     </ScrollView>
+
+    <TextView
+        android:id="@+id/codigoAsignar"
+        android:layout_width="290dp"
+        android:layout_height="34dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginEnd="80dp"
+        android:text="Codigo de evento/actividad:"
+        android:textColor="#FFFFFF"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/idCarnetColab2"
+        app:layout_constraintTop_toBottomOf="@+id/texto22" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
