--- a/app/src/main/res/layout/activity_lobby_asociaciones.xml
+++ b/app/src/main/res/layout/activity_lobby_asociaciones.xml
@@ -8,6 +8,22 @@
     android:background="@drawable/backgroundmain">
 
         <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btn_CreacionEventos"
+            android:layout_width="258dp"
+            android:layout_height="63dp"
+            android:layout_marginStart="76dp"
+            android:layout_marginTop="396dp"
+            android:background="@drawable/round_button_background"
+            android:backgroundTint="@color/white"
+            android:fontFamily="sans-serif-medium"
+            android:text="Creación de eventos"
+            android:textAlignment="center"
+            android:textColor="@color/purple_700"
+            android:textSize="16sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btn_RegistrarAsociacion"
             android:layout_width="258dp"
             android:layout_height="63dp"
@@ -24,20 +40,20 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/btn_CreacionEventos"
+            android:id="@+id/btn_CreacionActividad"
             android:layout_width="258dp"
             android:layout_height="63dp"
             android:layout_marginStart="76dp"
-            android:layout_marginTop="396dp"
+            android:layout_marginTop="20dp"
             android:background="@drawable/round_button_background"
             android:backgroundTint="@color/white"
             android:fontFamily="sans-serif-medium"
-            android:text="Creación de eventos"
+            android:text="Creación de actividades"
             android:textAlignment="center"
             android:textColor="@color/purple_700"
             android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@+id/btn_ConsultarEventos" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btn_ConsultarEventos"
